fix quotes alignment

--- a/ruidosa.css
+++ b/ruidosa.css
@@ -98,7 +98,7 @@ body {
     width: 332px;
     content: " ";
     position: absolute;
-    right: -295px;
+    right: -286px;
     top: 60px;
     height: 300px;
 }
@@ -109,7 +109,7 @@ body {
     width: 332px;
     content: " ";
     position: absolute;
-    left: -322px;
+    left: -285px;
     top: 60px;
     height: 330px;
 }
